# Inplace

./: .gitignore  CHANGELOG.md  Cargo.toml  readme.md
.github/workflows/: ci.yml
examples/: basic.rs
src/: lib.rs
src/inplace_string/: inplace_string.rs  inplace_string_macros.rs  mod.rs  string.rs
src/inplace_vector/: inplace_vector.rs  inplace_vector_macros.rs  mod.rs  vector.rs
