[package]
name = "inplace_containers"
version = "0.2.0"
edition = "2021"
description = "In-place, fixed-capacity containers with optional features"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cristi1990an/Inplace"
homepage = "https://github.com/cristi1990an/Inplace"
documentation = "https://docs.rs/inplace"


[features]
default = ["all"]

all = ["inplace_vector", "inplace_string"]

inplace_vector = []
inplace_string = []
