[package]
name = "inplace_containers"
version = "0.3.1"
edition = "2021"
description = "In-place, fixed-capacity containers with optional features"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cristi1990an/Inplace"
homepage = "https://github.com/cristi1990an/Inplace"
documentation = "https://docs.rs/inplace_containers/latest/inplace_containers/"


[features]
default = ["all"]

all = ["inplace_vector", "inplace_string"]

inplace_vector = []
inplace_string = []
